--- a/source/css/styleguide.css
+++ b/source/css/styleguide.css
@@ -29,7 +29,7 @@ h6.label {
   margin-left: -20px;
   margin-right: -20px;
   text-align: left;
-  background-color: #5FB888; }
+  background-color: #ffecd2; }
 
 .panel {
   background-color: #F9F9F9;
