--- a/source/scss/styleguide.scss
+++ b/source/scss/styleguide.scss
@@ -20,7 +20,7 @@ h6.label {
   margin-left: -20px;
   margin-right: -20px;
   text-align: left;
-  background-color: $light-green;
+  background-color: lighten($lighter-orange, 20%);
 }
 
 .panel { background-color: #F9F9F9; border-color: $smoke; }
