Finished styling buttons

--- a/source/scss/_settings.scss
+++ b/source/scss/_settings.scss
@@ -107,7 +107,7 @@ $font-weight-normal: normal;
  $white       : #FFFFFF;
  $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
-// $vapor       : #F6F6F6;
+$vapor       : #F6F6F6;
 $white-smoke : #F3F3F3; // modified from #F5F5F5
 // $silver      : #EFEFEF;
 $smoke       : #EEEEEE;
