--- a/source/css/purpleline.css
+++ b/source/css/purpleline.css
@@ -5322,9 +5322,12 @@ button,
   transition: background-color 300ms ease-out;
   line-height: inherit;
   background-color: transparent;
+  border-color: #DDDDDD;
   border-width: 1px;
   border-style: solid;
-  box-shadow: none; }
+  color: #555555;
+  box-shadow: none;
+  transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1); }
   button:hover, button:focus,
   .button:hover,
   .button:focus {
@@ -5333,6 +5336,9 @@ button,
   .button:hover,
   .button:focus {
     color: #333333; }
+  button span,
+  .button span {
+    transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1); }
   button:focus,
   .button:focus {
     outline: none; }
@@ -5340,15 +5346,52 @@ button,
   .button:hover,
   .button:active,
   .button:focus {
-    color: #fff;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2) inset, 0pt -10px 10pt rgba(0, 0, 0, 0.075) inset;
-    background-color: #555555; }
+    border-color: #DDDDDD;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.4);
+    background-color: transparent; }
     button:hover span, button:active span, button:focus span,
     .button:hover span,
     .button:active span,
     .button:focus span {
-      color: #fff;
       text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4); }
+  button.light,
+  .button.light {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 0;
+    cursor: pointer;
+    font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 1rem 2rem 1.0625rem 2rem;
+    font-size: 1rem;
+    background-color: #FFFFFF;
+    border-color: #DDDDDD;
+    color: #333333;
+    border-radius: 4px;
+    transition: background-color 300ms ease-out;
+    color: #555555; }
+    button.light:hover, button.light:focus,
+    .button.light:hover,
+    .button.light:focus {
+      background-color: #FAFAFA; }
+    button.light:hover, button.light:focus,
+    .button.light:hover,
+    .button.light:focus {
+      color: #333333; }
+    button.light:hover,
+    .button.light:hover {
+      border-color: #DDDDDD; }
+    button.light.disabled:hover,
+    .button.light.disabled:hover {
+      background-color: #FFFFFF; }
   button.inverse,
   .button.inverse {
     -webkit-appearance: none;
@@ -5367,30 +5410,183 @@ button,
     display: inline-block;
     padding: 1rem 2rem 1.0625rem 2rem;
     font-size: 1rem;
-    background-color: #FFFFFF;
-    border-color: #AAAAAA;
-    color: #333333;
+    background-color: #555555;
+    border-color: #888888;
+    color: #FFFFFF;
     border-radius: 4px;
-    transition: background-color 300ms ease-out;
-    border-width: 1px;
-    line-height: inherit; }
+    transition: background-color 300ms ease-out; }
     button.inverse:hover, button.inverse:focus,
     .button.inverse:hover,
     .button.inverse:focus {
-      background-color: #555555; }
+      background-color: #333333; }
     button.inverse:hover, button.inverse:focus,
     .button.inverse:hover,
     .button.inverse:focus {
       color: #FFFFFF; }
+    button.inverse:hover,
+    .button.inverse:hover {
+      border-color: #555555; }
     button.inverse.disabled:hover,
     .button.inverse.disabled:hover {
       background-color: #FFFFFF; }
-  button.warning span,
-  .button.warning span {
-    color: #333333; }
-  button.warning:hover span,
-  .button.warning:hover span {
-    text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.6); }
+  button.success,
+  .button.success {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 0;
+    cursor: pointer;
+    font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 1rem 2rem 1.0625rem 2rem;
+    font-size: 1rem;
+    background-color: #4EB78A;
+    border-color: #4EB78A;
+    color: #FFFFFF;
+    border-radius: 4px;
+    transition: background-color 300ms ease-out;
+    text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6); }
+    button.success:hover, button.success:focus,
+    .button.success:hover,
+    .button.success:focus {
+      background-color: #44a77d; }
+    button.success:hover, button.success:focus,
+    .button.success:hover,
+    .button.success:focus {
+      color: #FFFFFF; }
+    button.success:hover,
+    .button.success:hover {
+      border-color: #3d956f; }
+      button.success:hover span,
+      .button.success:hover span {
+        text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6); }
+  button.warning,
+  .button.warning {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 0;
+    cursor: pointer;
+    font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 1rem 2rem 1.0625rem 2rem;
+    font-size: 1rem;
+    background-color: #FFC06C;
+    border-color: #FFC06C;
+    color: #333333;
+    border-radius: 4px;
+    transition: background-color 300ms ease-out;
+    color: #DF4E13; }
+    button.warning:hover, button.warning:focus,
+    .button.warning:hover,
+    .button.warning:focus {
+      background-color: #ffb553; }
+    button.warning:hover, button.warning:focus,
+    .button.warning:hover,
+    .button.warning:focus {
+      color: #FFFFFF; }
+    button.warning span,
+    .button.warning span {
+      color: #b03e0f; }
+    button.warning:hover,
+    .button.warning:hover {
+      border-color: #ffb553; }
+  button.alert,
+  .button.alert {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 0;
+    cursor: pointer;
+    font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 1rem 2rem 1.0625rem 2rem;
+    font-size: 1rem;
+    background-color: #DF4E13;
+    border-color: #DF4E13;
+    color: #FFFFFF;
+    border-radius: 4px;
+    transition: background-color 300ms ease-out;
+    color: #FFFFFF; }
+    button.alert:hover, button.alert:focus,
+    .button.alert:hover,
+    .button.alert:focus {
+      background-color: #c84611; }
+    button.alert:hover, button.alert:focus,
+    .button.alert:hover,
+    .button.alert:focus {
+      color: #FFFFFF; }
+    button.alert span,
+    .button.alert span {
+      color: #FFFFFF; }
+    button.alert:hover,
+    .button.alert:hover {
+      border-color: #c84611; }
+      button.alert:hover span,
+      .button.alert:hover span {
+        text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6); }
+  button.info,
+  .button.info {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 0;
+    cursor: pointer;
+    font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 1rem 2rem 1.0625rem 2rem;
+    font-size: 1rem;
+    background-color: #5085AD;
+    border-color: #5085AD;
+    color: #FFFFFF;
+    border-radius: 4px;
+    transition: background-color 300ms ease-out;
+    color: #FFFFFF; }
+    button.info:hover, button.info:focus,
+    .button.info:hover,
+    .button.info:focus {
+      background-color: #155A8F; }
+    button.info:hover, button.info:focus,
+    .button.info:hover,
+    .button.info:focus {
+      color: #FFFFFF; }
+    button.info span,
+    .button.info span {
+      color: #FFFFFF; }
+    button.info:hover,
+    .button.info:hover {
+      border-color: #155A8F; }
+      button.info:hover span,
+      .button.info:hover span {
+        text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6); }
   button.disabled, button.disabled:hover,
   .button.disabled,
   .button.disabled:hover {
@@ -5402,24 +5598,50 @@ button,
     .button.disabled:hover span {
       color: #333333;
       text-shadow: none; }
+  button.light, button.inverse, button.success, button.warning, button.disabled, button.alert, button.info,
+  .button.light,
+  .button.inverse,
+  .button.success,
+  .button.warning,
+  .button.disabled,
+  .button.alert,
+  .button.info {
+    transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+    border-width: 1px; }
+    button.light.postfix.button, button.inverse.postfix.button, button.success.postfix.button, button.warning.postfix.button, button.disabled.postfix.button, button.alert.postfix.button, button.info.postfix.button,
+    .button.light.postfix.button,
+    .button.inverse.postfix.button,
+    .button.success.postfix.button,
+    .button.warning.postfix.button,
+    .button.disabled.postfix.button,
+    .button.alert.postfix.button,
+    .button.info.postfix.button {
+      border: none;
+      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: 0;
+      padding-top: 0;
+      text-align: center; }
   button.split:hover span,
   .button.split:hover span {
-    border-left-color: rgba(255, 255, 255, 0.5); }
+    border-left-color: #DDDDDD; }
     button.split:hover span:after,
     .button.split:hover span:after {
-      border-color: #FFF transparent transparent transparent; }
+      border-color: #555555 transparent transparent transparent; }
   button.split span,
   .button.split span {
-    border-left-color: rgba(127, 127, 127, 0.5); }
+    border-left-color: #DDDDDD;
+    transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1); }
     button.split span:after,
     .button.split span:after {
-      border-color: #999999 transparent transparent transparent; }
+      transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      border-color: #555555 transparent transparent transparent; }
   button.dropdown:hover:after,
   .button.dropdown:hover:after {
-    border-color: #FFF transparent transparent transparent; }
+    border-color: #555555 transparent transparent transparent; }
   button.dropdown:after,
   .button.dropdown:after {
-    border-color: #999999 transparent transparent transparent; }
+    border-color: #555555 transparent transparent transparent; }
 
 table {
   font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif; }
