--- a/source/scss/purpleline.scss
+++ b/source/scss/purpleline.scss
@@ -11,7 +11,14 @@
  * 728px
  * */
 
+
+/* Settings
+================================================== */
 @import "settings";
+
+
+/* Foundation
+================================================== */
 // Basic structure/styling
 @import "foundation/components/block-grid",
 		"foundation/components/grid",
@@ -43,260 +50,12 @@
 // Media
 @import "foundation/components/thumbs"; // image anchor tags
 
-// Knight Lab colors
-.lightest-orange-bg {
-	background: $lighter-orange;
-}
-
-.lightest-orange-text {
-	color: $lighter-orange;
-}
-
-.light-orange-bg {
-	background: $light-orange;
-}
-
-.light-orange-text {
-	color: $light-orange;
-}
-
-.orange-bg {
-	background: $orange;
-}
-
-.orange-text {
-	color: $orange;
-}
-
-.dark-orange-bg {
-	background: $dark-orange;
-}
-
-.dark-orange-text {
-	color: $dark-orange;
-}
-
-.yellow-bg {
-	background: $light-yellow;
-}
-
-.yellow-text {
-	color: $light-green;
-}
-
-.light-blue-bg {
-	background: $light-blue;
-}
-
-.light-blue-text {
-	color: $light-blue;
-}
-
-.medium-blue-bg {
-	background: $medium-blue;
-}
-
-.medium-blue-text {
-	color: $medium-blue;
-}
-
-.dark-blue-bg {
-	background: $dark-blue;
-}
-
-.dark-blue-text {
-	color: $dark-blue;
-}
+/* Purpleline Components
+================================================== */
+@import "purpleline_components/colors", // Knight Lab Colors
+		"purpleline_components/typography"; // Typography
 
 
-// Knight Lab typography
-h1.post-title {
-	font-style: normal;
-	line-height: 1.1;
-}
-
-.logo-mark {
-	font-size: 60px;
-	white-space: nowrap;
-	line-height: 1em;
-	margin-bottom: 0px;
-	&.xl,
-	&.xxl {
-		font-size: rem-calc(65);
-		margin-top: 5px;
-	}
-	& + h2.intro {
-		margin-top: 0px;
-	}
-	// TODO: Adjust this min-width as needed
-	@media all and (min-width: 767px) {
-		&.xl {
-			font-size: rem-calc(90);
-			margin-top: 35px;
-		}
-		&.xxl {
-			font-size: rem-calc(120);
-			margin-top: 35px;
-		}
-	}
-	&.bg-white span:before {
-		border-color: #0f9bd1 #fff;
-	}
-	span {
-		background: none repeat scroll 0 0 $light-blue;
-		border-radius: 3px 0px 3px 3px;
-		color: #FFFFFF;
-		font-size: 0.5em;
-		line-height: 0.5em;
-		margin: 5px 6px 0;
-		overflow: hidden;
-		padding: 0.35em 0.45em 0.2em;
-		position: relative;
-		vertical-align: text-top;
-		display: inline-block;
-		&:before {
-			border-color: $light-blue #f3f3f3;
-			border-style: solid;
-			border-width: 0 16px 16px 0;
-			content: "";
-			position: absolute;
-			right: 0;
-			top: -1px;
-		}
-	}
-	@media screen and (-webkit-min-device-pixel-ratio: 0) {
-		span {
-			padding: 0.35em .47em .3em .36em;
-		}
-	}
-}
-
-p {
-	font-family: inherit;
-	font-size: 1rem;
-	font-weight: normal;
-	line-height: 1.6;
-	margin-bottom: 1.25rem;
-	text-rendering: optimizeLegibility;
-	&.lead {
-		font-size: 1.4rem;
-		line-height: 1.6;
-	}
-}
-
-p aside {
-	font-size: 0.875rem;
-	font-style: italic;
-	line-height: 1.35;
-}
-
-a {
-	transition: color 0.3s ease-in-out;
-}
-
-ul {
-	list-style-type: square;
-	&.contact-icons {
-		list-style-type: none;
-		margin-left: 0;
-		margin-bottom: 0;
-		display: table;
-		content: "";
-		clear: both;
-		li {
-			display: inline-block;
-			float: left;
-			padding-top: 7px;
-			min-height: 33px;
-			padding: 8px 12px 0 0px;
-			margin: 0 -1px;
-			&:first-child {
-				padding-left: 12px;
-			}
-			a,
-			a:link,
-			a:visited {
-				color: $charcoal;
-			}
-			a:hover,
-			a:active {
-				color: $light-blue;
-			}
-			i {
-				width: rem-calc(20);
-				text-align: center;
-			}
-		}
-	}
-	li {
-		line-height: 22px;
-		padding: 2px 0 6px;
-	}
-}
-
-blockquote {
-	padding: 1em 1em 0;
-	margin: 0 0 22px;
-	overflow: auto;
-	font-family: $font-family-serif;
-	font-style: italic;
-	background-color: $ghost;
-	p {
-		font-size: rem-calc(19);
-		line-height: rem-calc(30);
-		//font-size: rem-calc(17.5);
-		//line-height: rem-calc(26.5);
-		color: $charcoal;
-		&.source {
-			text-align: right;
-			font-family:$font-family-sans-serif;
-			font-style: normal;
-			font-size: rem-calc(14);
-		}
-	}
-}
-
-.drop-hed,
-.panel .drop-hed {
-	color: $dark-orange;
-	font-family: $font-family-sans-serif;
-	font-size: rem-calc(18);
-	text-transform: uppercase;
-	a {
-		&:link,
-		&:visited {
-			color: $dark-orange;
-		}
-		&:hover,
-		&:active {
-			color: $light-orange;
-		}
-	}
-}
-
-.byline,
-.panel .byline {
-	font-family: $font-family-sans-serif;
-	text-transform: uppercase;
-	color: $jumbo;
-}
-
-@media screen and (min-width: 728px) {
-	*[data-pullquote]:before {
-		border-bottom: medium double $gainsboro;
-		border-top: medium double $gainsboro;
-		color: $orange;
-		content: attr(data-pullquote);
-		float: right;
-		font-family: $font-family-display-serif;
-		font-size: rem-calc(25);
-		font-style: italic;
-		line-height: 1.3;
-		margin: 7px 0 .5em 35px;
-		padding: 22px 1px 20px;
-		width: 34%;
-	}
-}
 
 // Knight Lab utilities
 .row {
